homework-k8s/k8s/auth-bff-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: health-auth-bff
  namespace: yahu
  labels:
    app: health-auth-bff
spec:
  selector:
    app: health-auth-bff
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: http
  type: ClusterIP
