homework-k8s/k8s/auth-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: health-auth-service
  namespace: yahu
  labels:
    app: health-auth-service
spec:
  selector:
    app: health-auth-service
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: http
  type: ClusterIP
