homework-k8s/k8s/bff-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: health-bff
  namespace: yahu
  labels:
    app: health-bff
spec:
  selector:
    app: health-bff
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: http
  type: ClusterIP
