homework-k8s/k8s/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: health-service
  namespace: yahu
  labels:
    app: health-service

spec:
  selector:
    app: health-service

  ports:
    - name: http
      port: 80
      targetPort: 8000

  type: ClusterIP
